--- a/package.json
+++ b/package.json
@@ -18,21 +18,30 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.2",
+        "express-async-errors": "^3.1.1",
         "module-alias": "^2.2.2",
-        "nodemailer": "^6.7.2"
+        "nodemailer": "^6.7.2",
+        "rate-limiter-flexible": "^2.3.6",
+        "reflect-metadata": "^0.1.13",
+        "tsyringe": "^4.6.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/jest": "^27.4.0",
         "@types/module-alias": "^2.0.1",
         "@types/node": "^17.0.17",
         "@types/nodemailer": "^6.4.4",
+        "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.11.0",
         "@typescript-eslint/parser": "^5.11.0",
         "eslint": "^8.9.0",
         "git-commit-msg-linter": "^4.0.7",
+        "jest": "^27.5.1",
         "prettier": "^2.5.1",
         "rimraf": "^3.0.2",
+        "supertest": "^6.2.2",
+        "ts-jest": "^27.1.3",
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths": "^3.12.0",
         "typescript": "^4.5.5"
