test: create message route tests

--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
     "name": "api.brunohubner.com",
     "version": "1.0.0",
     "author": "Bruno Hubner <brunohubnerdev@gmail.com>",
-    "private": "true",
+    "private": true,
     "scripts": {
         "build": "rimraf dist && tsc -p tsconfig-build.json",
         "start": "node dist/server.js",
-        "start:local": "yarn build && yarn start",
+        "start:local": "npm run build && npm start",
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
         "lint": "eslint src --ext .ts",
         "lint:fix": "eslint . --ext .ts --fix",
         "prettier:fix": "prettier --write src",
         "test:base": "jest --passWithNoTests --forceExit --runInBand --no-cache",
-        "test:unit": "yarn test:base -- -c jest-unit-config.js",
-        "test:integration": "yarn test:base -- -c jest-integration-config.js",
-        "test:staged": "yarn test:base --findRelatedTests tests",
-        "test:ci": "yarn test:base -- --coverage",
-        "test:coveralls": "yarn test:ci && coveralls < coverage/lcov.info",
-        "test": "yarn test:unit && yarn test:integration"
+        "test:unit": "npm run test:base -- -c jest-unit-config.js",
+        "test:integration": "npm run test:base -- -c jest-integration-config.js",
+        "test:staged": "npm run test:base --findRelatedTests tests",
+        "test:ci": "npm run test:base -- --coverage",
+        "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
+        "test": "npm run test:unit && npm run test:integration"
     },
     "license": "ISC",
     "dependencies": {
