feat: add requests limiter

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "version": "1.0.0",
     "author": "Bruno Hubner <brunohubnerdev@gmail.com>",
     "private": true,
+    "main": "dist/index.js",
     "scripts": {
         "build": "rimraf dist && tsc -p tsconfig-build.json",
-        "start": "node dist/server.js",
+        "start": "node .",
         "start:local": "npm run build && npm start",
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
         "lint": "eslint src --ext .ts",
@@ -26,6 +27,7 @@
         "dotenv": "^16.0.0",
         "express": "^4.17.2",
         "express-async-errors": "^3.1.1",
+        "express-rate-limit": "^6.2.1",
         "module-alias": "^2.2.2",
         "nodemailer": "^6.7.2",
         "rate-limiter-flexible": "^2.3.6",
