chore: romove unused libs

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 PORT=
 BACKEND_URL=
+
+# Mail Services
+SENDGRID_API_KEY=
+
 PRIVATE_EMAIL=
 PUBLIC_EMAIL=
-SENDGRID_API_KEY=
+
+# 'ethereal' or 'sendgrid'
+MAIL_PROVIDER=ethereal
+
