--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "express": "^4.17.2",
         "express-async-errors": "^3.1.1",
         "express-rate-limit": "^6.2.1",
+        "ip-info-finder": "^1.1.5",
         "module-alias": "^2.2.2",
         "nodemailer": "^6.7.2",
         "reflect-metadata": "^0.1.13",
