refactor: add new address service

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ CORS_CLOSED=
 # Mail Services
 SENDGRID_API_KEY=
 
-PRIVATE_EMAIL=
-PUBLIC_EMAIL=
+SENDGRID_EMAIL_TO=
+SENDGRID_EMAIL_FROM=
 
 # 'ethereal' or 'sendgrid'
 MAIL_PROVIDER=ethereal
