--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
         "test": "npm run test:unit && npm run test:integration"
     },
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "@sendgrid/mail": "^7.6.1",
         "cors": "^2.8.5",
