chore: update all dependencies

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
         "start": "node .",
         "start:local": "npm run build && npm start",
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
-        "lint": "eslint src --ext .ts",
-        "lint:fix": "eslint . --ext .ts --fix",
-        "prettier:fix": "prettier --write src",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
         "test:base": "jest --passWithNoTests --forceExit --runInBand --no-cache",
         "test:unit": "npm run test:base -- -c jest-unit-config.js",
         "test:integration": "npm run test:base -- -c jest-integration-config.js",
@@ -22,38 +21,37 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@sendgrid/mail": "^7.6.1",
+        "@sendgrid/mail": "^7.7.0",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.0",
-        "express": "^4.17.2",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
         "express-async-errors": "^3.1.1",
-        "express-rate-limit": "^6.2.1",
-        "ip-info-finder": "^1.1.5",
+        "express-rate-limit": "^6.4.0",
         "module-alias": "^2.2.2",
-        "nodemailer": "^6.7.2",
+        "nodemailer": "^6.7.5",
         "reflect-metadata": "^0.1.13",
-        "tsyringe": "^4.6.0"
+        "tsyringe": "^4.7.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
-        "@types/jest": "^27.4.0",
+        "@types/jest": "^27.5.1",
         "@types/module-alias": "^2.0.1",
-        "@types/node": "^17.0.17",
+        "@types/node": "^17.0.36",
         "@types/nodemailer": "^6.4.4",
-        "@types/supertest": "^2.0.11",
-        "@typescript-eslint/eslint-plugin": "^5.11.0",
-        "@typescript-eslint/parser": "^5.11.0",
-        "eslint": "^8.9.0",
-        "git-commit-msg-linter": "^4.0.7",
-        "jest": "^27.5.1",
-        "prettier": "^2.5.1",
+        "@types/supertest": "^2.0.12",
+        "@typescript-eslint/eslint-plugin": "^5.26.0",
+        "@typescript-eslint/parser": "^5.26.0",
+        "eslint": "^8.16.0",
+        "git-commit-msg-linter": "^4.1.3",
+        "jest": "^28.1.0",
+        "prettier": "^2.6.2",
         "rimraf": "^3.0.2",
-        "supertest": "^6.2.2",
-        "ts-jest": "^27.1.3",
-        "ts-node-dev": "^1.1.8",
-        "tsconfig-paths": "^3.12.0",
-        "typescript": "^4.5.5"
+        "supertest": "^6.2.3",
+        "ts-jest": "^28.0.3",
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.0.0",
+        "typescript": "^4.7.2"
     },
     "engines": {
         "node": "16.15.0"
